# script.module.pil

./: CMakeLists.txt
depends/common/freetype/: CMakelists.txt  freetype.txt
depends/common/jpeg/: CMakelists.txt
depends/common/libjpeg-turbo/: CMakeLists.txt  CMakelists.txt  libjpeg-turbo.txt
depends/common/libpng/: CMakelists.txt  libpng.txt
depends/common/pillow/: CMakelists.txt  deps.txt  pillow.txt
